fix letter spacing in qrcode modal

--- a/packages/@coorpacademy-components/src/organism/get-the-app/style.css
+++ b/packages/@coorpacademy-components/src/organism/get-the-app/style.css
@@ -188,6 +188,9 @@
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
+.qrcodeModalLink {
+  margin: 0px 3px;
+}
 /* Responsive */
 
 @media tablet {
